destination-rule-tls.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: default
  namespace: cloud-lab
spec:
  host: '*.cloud-lab.svc.cluster.local'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
