ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-virtualservice
spec:
  hosts:
  - "ui-cloud-lab.apps.cp41apps.notesfromchechu.com"
  gateways:
  - ui-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: ui
        port:
          number: 3000
